manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: spring-api-cert
    networking.gke.io/v1beta1.FrontendConfig: my-frontend-config
    kubernetes.io/ingress.global-static-ip-name: "spring-api-external-ip"
spec:
  rules:
   - host:
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: spring-postgres-svc
               port: 
                 number: 80
